--- a/admin.html
+++ b/admin.html
@@ -17,7 +17,7 @@
 
     <aside class="sidebar">
      <div class="sidebar-heading">
-       <img class="logo" src="image.png" alt="logo" />
+       <img class="logo" src="images/QU-logo.png" alt="logo" />
        <h1>Qatar university</h1>
      </div>
 
