--- a/assets/index.html
+++ b/assets/index.html
@@ -6,8 +6,7 @@
     <title>Qatar University Website</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
-    <script src="js/studentScript.js"></script>
+    <script src="js/indexScript.js" defer></script>
 
 </head>
 <body>
