--- a/assets/side_student/courseRegisteration.html
+++ b/assets/side_student/courseRegisteration.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course Registration</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0">
     <link rel="stylesheet" href="../css/studentStyle.css">
-    <script src="../js/studentScript.js"></script>
+    <script src="../js/navScript.js" defer></script>
 </head>
 <body>
     <header>
@@ -15,14 +16,19 @@
                 <img src="../images/QU-logo.png" alt="Qatar University Logo">
                 <span class="university-name">Qatar University</span>
             </div>
-
             <ul class="nav-links">
-                <li><a href="#"><span class="material-symbols-rounded">home</span>Dashboard</a></li>
-                <li><a href="#">Registration</a></li>
-                <li><a href="#">Learning Path</a></li>
+                <li><a href="studentDashboard"><span class="material-symbols-rounded">home</span>Dashboard</a></li>
+                <li><a href="courseRegistration">Registration</a></li>
+                <li><a href="LearningPath">Learning Path</a></li>
                 <li><a href="#"><span class="logout-btn material-symbols-rounded">logout</span>Logout</a></li>
             </ul>
         </nav>
-    </header> 
+    </header>
+    <main>
+        <div class="container">
+            <h1>Course Registration</h1>
+            <p>This is a placeholder for the course registration functionality.</p>
+        </div>
+    </main>
 </body>
 </html>
