--- a/assets/side_student/studentDashboard.html
+++ b/assets/side_student/studentDashboard.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0">
     <link rel="stylesheet" href="../css/studentStyle.css">
+    <script src="../js/navScript.js" defer></script>
     <script src="../js/studentScript.js" defer></script>
 </head>
 
@@ -32,19 +33,21 @@
             <div class="track-progress">
                 <h2>Track Progress</h2>
                 <div class="progress-box">
-                    <div class="progress-item">
-                        <span>Major:</span>
-                        <span id="major">Value</span>
+                    <div class="progress-details">
+                        <div class="progress-item">
+                            <span>Major:</span>
+                            <span id="major">Value</span>
+                        </div>
+                        <div class="progress-item">
+                            <span>CGPA:</span>
+                            <span id="copa">Value</span>
+                        </div>
+                        <div class="progress-item">
+                            <span>Advisor:</span>
+                            <span id="advisor">Value</span>
+                        </div>
                     </div>
-                    <div class="progress-item">
-                        <span>CGPA:</span>
-                        <span id="copa">Value</span>
-                    </div>
-                    <div class="progress-item">
-                        <span>Advisor:</span>
-                        <span id="advisor">Value</span>
-                    </div>
-                    <div class="progress-item">
+                    <div class="progress-bar-section">
                         <span>All Courses:</span>
                         <div class="progress-bar-container">
                             <div class="progress-bar-taken"></div> 
@@ -53,16 +56,16 @@
                         </div>
                         <div class="course-stats">
                             <div class="stat-box taken">
-                                <span>TAKEN:</span>
-                                <span id="taken">#</span>
+                                <span id="taken">0</span>
+                                <span>TAKEN</span>
                             </div>
                             <div class="stat-box registered">
-                                <span>REGISTERED:</span>
-                                <span id="registered">#</span>
+                                <span id="registered">0</span>
+                                <span>REGISTERED</span>
                             </div>
                             <div class="stat-box remaining">
-                                <span>REMAINING:</span>
-                                <span id="remaining">#</span>
+                                <span id="remaining">0</span>
+                                <span>REMAINING</span>
                             </div>
                         </div>
                     </div>
@@ -82,11 +85,12 @@
                 <div class="search-bars">
                     <div class="search-bar">
                         <span class="material-symbols-rounded">search</span>
-                        <input type="text" placeholder="Search your courses">
+                        <input type="text" id="courseSearch" placeholder="Search your courses">
                     </div>
                     <div class="search-bar">
                         <label for="Major">Major:</label>
                         <select id="Major">
+                            <option value="">All</option>
                             <option value="CMPS">CMPS</option>
                             <option value="CMPE">CMPE</option>
                             <option value="MATH">MATH</option>
@@ -95,15 +99,15 @@
                     <div class="search-bar">
                         <label for="Terms">Terms:</label>
                         <select id="Terms">
-                            <option value="Spring 2025">Spring</option>
-                            <option value="Fall 2024">Fall</option>
-                            <option value="Summer 2025">Summer</option>
+                            <option value="">All</option>
+                            <option value="Spring">Spring</option>
+                            <option value="Fall">Fall</option>
+                            <option value="Summer">Summer</option>
                         </select>
                     </div>
                 </div>
 
                 <div class="course-boxes">
-                   
                 </div>
             </div>
         </div>
