--- a/assets/side_Instructor/InstructorDashboard.html
+++ b/assets/side_Instructor/InstructorDashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Insturctor Dashboard</title>
+    <title>Insturctor</title>
     <link rel="stylesheet" href="css/instructor_styles.css">
 </head>
 <body>
