--- a/assets/side_Instructor/InstructorDashboard.html
+++ b/assets/side_Instructor/InstructorDashboard.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insturctor</title>
-    <link rel="stylesheet" href="css/instructor_styles.css">
+    <link rel="stylesheet" href="../css/instructor_styles.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="images/QU-logo.png" alt="Qatar University Logo">
+                <img src="../images/QU-logo.png" alt="Qatar University Logo">
             </div>
 
             <ul class="nav-links">
