--- a/assets/side_student/studentDashboard.html
+++ b/assets/side_student/studentDashboard.html
@@ -40,7 +40,7 @@
                         </div>
                         <div class="progress-item">
                             <span>CGPA:</span>
-                            <span id="copa">Value</span>
+                            <span id="cgpa">Value</span>
                         </div>
                         <div class="progress-item">
                             <span>Advisor:</span>
