--- a/assets/side_Admin/admin.html
+++ b/assets/side_Admin/admin.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="stylesheet" href="css/admin_styles.css" />
+  <link rel="stylesheet" href="../css/admin_styles.css" />
 </head>
 <body>
 
@@ -17,7 +17,7 @@
 
     <aside class="sidebar">
      <div class="sidebar-heading">
-       <img class="logo" src="images/QU-logo.png" alt="logo" />
+       <img class="logo" src="../images/QU-logo.png" alt="logo" />
        <h1>Qatar university</h1>
      </div>
 
