--- a/assets/side_student/studentDashboard.html
+++ b/assets/side_student/studentDashboard.html
@@ -10,7 +10,6 @@
     <script src="../js/navScript.js" defer></script>
     <script src="../js/studentScript.js" defer></script>
 </head>
-
 <body>
     <header>
         <nav class="navbar">
@@ -18,11 +17,9 @@
                 <img src="../images/QU-logo.png" alt="Qatar University Logo">
                 <span class="university-name">Qatar University</span>
             </div>
-
             <ul class="nav-links">
                 <li><a href="studentDashboard"><span class="material-symbols-rounded">home</span>Dashboard</a></li>
-                <li><a href="courseRegistration">Registration</a></li>
-                <li><a href="LearningPath">Learning Path</a></li>
+                <li><a href="LearningPath"><span class="material-symbols-rounded">school</span>Learning Path</a></li>
                 <li><a href="#"><span class="logout-btn material-symbols-rounded">logout</span>Logout</a></li>
             </ul>
         </nav>
