--- a/assets/side_student/learningPath.html
+++ b/assets/side_student/learningPath.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0">
     <link rel="stylesheet" href="../css/studentStyle.css">
     <script src="../js/navScript.js" defer></script>
+    <script src="../js/learningPathScript.js" defer></script>
 </head>
 <body>
     <header>
@@ -18,14 +19,26 @@
             </div>
             <ul class="nav-links">
                 <li><a href="studentDashboard"><span class="material-symbols-rounded">home</span>Dashboard</a></li>
-                <li><a href="courseRegistration">Registration</a></li>
-                <li><a href="LearningPath">Learning Path</a></li>
+                <li><a href="LearningPath"><span class="material-symbols-rounded">school</span>Learning Path</a></li>
                 <li><a href="#"><span class="logout-btn material-symbols-rounded">logout</span>Logout</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        
+        <div class="container">
+            <div class="learning-path-section">
+                <h2>Your Learning Path</h2>
+                <div class="filter-bar">
+                    <label for="courseStatus">Filter by Status:</label>
+                    <select id="courseStatus">
+                        <option value="Completed">Completed</option>
+                        <option value="In Progress">In Progress</option>
+                        <option value="Pending">Pending</option>
+                    </select>
+                </div>
+                <div class="course-cards"></div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
