updated Json Files

--- a/assets/side_student/studentDashboard.html
+++ b/assets/side_student/studentDashboard.html
@@ -94,7 +94,7 @@
                         </select>
                     </div>
                     <div class="search-bar">
-                        <label for="Terms">Terms:</label>
+                        <label for="Terms">Term:</label>
                         <select id="Terms">
                             <option value="">All</option>
                             <option value="Spring">Spring</option>
