--- a/assets/side_Instructor/InstructorDashboard.html
+++ b/assets/side_Instructor/InstructorDashboard.html
@@ -24,7 +24,7 @@
     <main>
         <section id="Classes_Cards">
 
-            <section id="CCard">
+            <!-- <section id="CCard">
                 <h3>Sub1</h3>
                 <div id="Sections">
                     <a href="" id="Section">L01</a>
@@ -35,7 +35,7 @@
 
                 </div>
                 
-            </section>
+            </section> -->
 
             <!-- <section id="CCard">
                 <h3>Sub1</h3>
@@ -131,6 +131,6 @@
     <footer>
 
     </footer>
-
+    <script src="../js/Instructor.js"></script>
 </body>
 </html>
