--- a/assets/side_student/studentDashboard.html
+++ b/assets/side_student/studentDashboard.html
@@ -7,8 +7,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0">
     <link rel="stylesheet" href="../css/studentStyle.css">
-    <script src="../js/navScript.js" defer></script>
-    <script src="../js/studentScript.js" defer></script>
 </head>
 <body>
     <header>
@@ -109,5 +107,9 @@
             </div>
         </div>
     </main>
+
+    <script type="module" src="../js/dataManager.js"></script>
+    <script type="module" src="../js/navScript.js"></script>
+    <script type="module" src="../js/studentScript.js"></script>
 </body>
 </html>
