--- a/assets/index.html
+++ b/assets/index.html
@@ -6,7 +6,6 @@
     <title>Qatar University Website</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/indexScript.js" defer></script>
 </head>
 <body>
     <header>
@@ -53,5 +52,8 @@
             </div>
         </div>
     </main>
+
+    <script type="module" src="js/dataManager.js"></script>
+    <script type="module" src="js/indexScript.js"></script>
 </body>
 </html>
