--- a/assets/side_student/learningPath.html
+++ b/assets/side_student/learningPath.html
@@ -7,8 +7,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0">
     <link rel="stylesheet" href="../css/studentStyle.css">
-    <script src="../js/navScript.js" defer></script>
-    <script src="../js/learningPathScript.js" defer></script>
 </head>
 <body>
     <header>
@@ -20,7 +18,7 @@
             <ul class="nav-links">
                 <li><a href="studentDashboard"><span class="material-symbols-rounded">home</span>Dashboard</a></li>
                 <li><a href="LearningPath"><span class="material-symbols-rounded">school</span>Learning Path</a></li>
-                <li><a href="#"><span class="material-symbols-rounded">logout</span>Logout</a></li>
+                <li><a href="#"><span class="logout-btn material-symbols-rounded">logout</span>Logout</a></li>
             </ul>
         </nav>
     </header>
@@ -38,5 +36,9 @@
             <ul class="course-list"></ul>
         </div>
     </main>
+
+    <script type="module" src="../js/dataManager.js"></script>
+    <script type="module" src="../js/navScript.js"></script>
+    <script type="module" src="../js/learningPathScript.js"></script>
 </body>
 </html>
