--- a/assets/side_Admin/admin.html
+++ b/assets/side_Admin/admin.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="stylesheet" href="admin_styles.css" />
+  <link rel="stylesheet" href="../css/admin_styles.css" />
 </head>
 
 <body>
@@ -36,11 +36,11 @@
       </li>
       <!-- New Student Requests Link -->
       <li>
-        <a href="" id="student-requests-link"><span class="material-symbols-outlined"> how_to_reg  </span>Student
+        <a href="studentRequests.html" id="student-requests-link"><span class="material-symbols-outlined"> how_to_reg  </span>Student
           Requests</a>
       </li>
       <li>
-        <a href="#" onclick="logout()"><span class="material-symbols-outlined"> logout </span>Logout</a>
+        <a href="../index.html" onclick="logout()"><span class="material-symbols-outlined"> logout </span>Logout</a>
       </li>
     </ul>
 
@@ -170,7 +170,7 @@
       <button id="confirm-button" onclick="handlepopup()">Confirm</button>
       <button id="cancel-button">Cancel</button>
   </div> -->
-  <script src="admin.js"></script>
+  <script src="../js/admin.js"></script>
   <!-- <script type="module" src="../js/admin.js"></script> -->
 
 </body>
