--- a/assets/side_student/studentDashboard.html
+++ b/assets/side_student/studentDashboard.html
@@ -24,8 +24,8 @@
     </header>
 
     <main>
-        <div class="container">
-            <div class="track-progress">
+        <article class="container">
+            <section class="track-progress">
                 <h2>Track Progress</h2>
                 <div class="progress-box">
                     <div class="progress-details">
@@ -65,17 +65,17 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
 
-            <div class="logo-welcome-section">
+            <section class="logo-welcome-section">
                 <img src="../images/QU-logo.png" alt="Qatar University Logo" class="welcome-logo">
                 <div class="welcome-message">
                     <h1>Welcome, <span id="student-name">John Doe</span>!</h1>
                     <p>We are glad to have you here at Qatar University. Your journey to success starts now!</p>
                 </div>
-            </div>
+            </section>
 
-            <div class="course-section">
+            <section class="course-section">
                 <h2>Courses</h2>
                 <div class="search-bars">
                     <div class="search-bar">
@@ -103,9 +103,10 @@
                 </div>
 
                 <div class="course-boxes">
+
                 </div>
-            </div>
-        </div>
+            </section>
+        </article>
     </main>
 
     <script type="module" src="../js/dataManager.js"></script>
