--- a/assets/side_Admin/studentRequests.html
+++ b/assets/side_Admin/studentRequests.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Student Requests - Admin Panel</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
-  <link rel="stylesheet" href="../css/admin_styles.css" />
-
+  <link rel="stylesheet" href="../css/studentRequests.css" />
 </head>
 <body>
   <aside class="sidebar">
@@ -17,30 +16,28 @@
 
     <ul class="links">
       <li>
-        <a href="index.html"><span class="material-symbols-outlined"> overview </span>Manage courses</a>
+        <a href="admin.html"><span class="material-symbols-rounded"> Home </span>Home</a>
       </li>
       <li>
-        <a href="#"><span class="material-symbols-outlined"> school </span>Manage instructors</a>
-      </li>
-      <li>
-        <a href="index.html"><span class="material-symbols-outlined"> overview </span>Manage courses</a>
-      </li>
-      <li>
-        <a href="student-requests.html" id="student-requests-link"><span class="material-symbols-outlined"> assignment </span>Student Requests</a>
-      </li>
-      <li>
-        <a href="#"><span class="material-symbols-outlined"> logout </span>Logout</a>
+        <a href="../index.html" onclick="logout()"><span class="logout-btn material-symbols-rounded"> logout </span>Logout</a>
       </li>
     </ul>
   </aside>
 
   <main>
     <h1>Student Registration Requests</h1>
-
+    <div class="filter-container">
+      <label for="major-filter">Filter by Major:</label>
+      <select id="major-filter">
+        <option value="">All</option>
+        <option value="CMPS">CMPS</option>
+        <option value="CMPE">CMPE</option>
+        <option value="MATH">MATH</option>
+      </select>
+    </div>
     <section class="student-requests">
-      <div class="requests-container">
+      <div class="requests-container"></div>
         
-      </div>
     </section>
   </main>
 
