--- a/assets/side_Admin/admin.html
+++ b/assets/side_Admin/admin.html
@@ -167,7 +167,7 @@
       <button id="confirm-button" onclick="handlepopup()">Confirm</button>
       <button id="cancel-button">Cancel</button>
   </div> -->
-  <script src="../js/admin.js"></script>
+  <script src="assets\js\admin.js"></script>
   <!-- <script type="module" src="../js/admin.js"></script> -->
 
 </body>
