--- a/assets/index.html
+++ b/assets/index.html
@@ -114,7 +114,6 @@
         </section>
     </main>
 
-    <script type="module" src="js/dataManager.js"></script>
-    <script type="module" src="js/indexScript.js"></script>
+    <script src="js/indexScript.js"></script>
 </body>
 </html>
