--- a/assets/side_student/learningPath.html
+++ b/assets/side_student/learningPath.html
@@ -53,8 +53,7 @@
         </div>
     </main>
 
-    <script type="module" src="../js/dataManager.js"></script>
-    <script type="module" src="../js/navScript.js"></script>
-    <script type="module" src="../js/learningPathScript.js"></script>
+    <script src="../js/navScript.js"></script>
+    <script src="../js/learningPathScript.js"></script>
 </body>
 </html>
