--- a/assets/side_student/studentDashboard.html
+++ b/assets/side_student/studentDashboard.html
@@ -109,8 +109,7 @@
         </article>
     </main>
 
-    <script type="module" src="../js/dataManager.js"></script>
-    <script type="module" src="../js/navScript.js"></script>
-    <script type="module" src="../js/studentScript.js"></script>
+    <script src="../js/navScript.js"></script>
+    <script src="../js/studentScript.js"></script>
 </body>
 </html>
