--- a/assets/side_Admin/admin.html
+++ b/assets/side_Admin/admin.html
@@ -1,79 +1,55 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin panel</title>
-
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="../css/admin_styles.css" />
 </head>
-
 <body>
-
   <aside class="sidebar">
     <div class="sidebar-heading">
       <img class="logo" src="../images/QU-logo.png" alt="logo" />
       <h1>Qatar university</h1>
     </div>
-
     <ul class="links">
       <li>
         <a href="#available-courses"><span class="material-symbols-outlined"> library_books  </span>Available courses & classes</a>
       </li>
-     
       <li>
         <a href="#course-form-section"><span class="material-symbols-outlined"> add_box  </span>Add classes/courses</a>
       </li>
       <li>
         <a href="#pending_classes"><span class="material-symbols-outlined"> pending_actions  </span>Pending Items</a>
       </li>
-      <!-- New Student Requests Link -->
-      <li>
-        <a href="studentRequests.html" id="student-requests-link"><span class="material-symbols-outlined"> how_to_reg  </span>Student
-          Requests</a>
-      </li>
       <li>
         <a href="../index.html" onclick="logout()"><span class="material-symbols-outlined"> logout </span>Logout</a>
       </li>
     </ul>
-
   </aside>
-
   <main>
-     
- 
     <h1 id="available-courses">Welcome to CSE admin panel</h1>
-
     <div class="available-courses">
-
       <div class="courses-header">
         <h2>Available Classes</h2>
-        <select id="departement">
-          <option value="ongoing">ongoing</option>
-          <option value="CE">upcoming</option>
-          <option selected value="all">All</option>
+        <select id="class-status-filter">
+          <option value="all">All</option>
+          <option value="open-for-registration">Open for Registration</option>
+          <option value="in-progress">In Progress</option>
         </select>
       </div>
-
-
-      <div class="course-container">
-
-
-      </div>
-
+      <div class="course-container"></div>
     </div>
-
     <section class="available-classes">
       <h2>Available Courses</h2>
-      <div class="class-container">
-
-      </div>
+      <select id="course-status-filter">
+        <option value="all">All</option>
+        <option value="open-for-registration">Open for Registration</option>
+        <option value="in-progress">In Progress</option>
+      </select>
+      <div class="class-container"></div>
     </section>
-
     <section class="course-form-section" id="course-form-section">
       <form action="" class="new-course">
         <h2>Add new class</h2>
@@ -83,66 +59,48 @@
           <option value="Spring">Spring</option>
           <option value="Fall">Fall</option>
         </select>
-        <input id="course-no-input" type="text" placeholder="Course ID" required>
+        <input id="course-no-input" type="number" placeholder="Course ID" required>
         <input id="section-input" type="text" placeholder="Section Number" required>
-
-        <input list="instructors" id="instructor-input" placeholder="Instructor">
-        <datalist id="instructors">
-          <!-- later -->
-        </datalist>
+        <input list="instructors" id="instructor-input" placeholder="Instructor" required>
+        <datalist id="instructors"></datalist>
         <select name="" id="status-selector">
-          <option>Status</option>
-          <option value="open">Open for registratioon</option>
-          <option value="closed">Closed for registration</option>
+          <option value="">Status</option>
+          <option value="open-for-registration">Open for Registration</option>
+          <option value="closed-for-registration">Closed for Registration</option>
         </select>
         <button id="submit-bt">Submit</button>
       </form>
-      </div>
-      </div>
     </section>
-
     <section class="class-form-section">
       <form action="" class="new-class-form">
         <h2>Add new course</h2>
-        <input class="course-name" type="text" placeholder="Course Name">
-        <input class="course-number" type="text" placeholder="Course Number">
-
+        <input class="course-name" type="text" placeholder="Course Name" required>
+        <input class="course-number" type="text" placeholder="Course Number" required>
         <h3>Select Majors:</h3>
         <div class="major-options">
           <label><input class="major-option" type="checkbox" name="major" value="CMPS">CMPS</label><br>
           <label><input class="major-option" type="checkbox" name="major" value="CMPE">CMPE</label><br>
           <label><input class="major-option" type="checkbox" name="major" value="MATH">MATH</label><br>
         </div>
-
         <div class="per-select-container">
-          <input class="pre-input" list="courses" type="text" placeholder="course pre-requisite" required>
-          <datalist id="courses">
-            <option value="CMPS 101">CMPS 101</option>
-            <!-- will be filled later -->
-          </datalist>
-
+          <input class="pre-input" list="courses" type="text" placeholder="Course Prerequisite" required>
+          <datalist id="courses"></datalist>
         </div>
-
-        <svg class="add-pre-bt" id="add-pre-bt" viewBox="0 9  9" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg class="add-pre-bt" id="add-pre-bt" viewBox="0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M12 4V20M4 12H20" stroke="#000000" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" />
         </svg>
         <button id="new-course-submit-bt">Submit</button>
       </form>
-
     </section>
-
-
     <section class="pending_classes" id="pending_classes">
-
       <div class="pending_classes_header">
         <h1>Pending Courses/Classes</h1>
         <select id="pending_selector">
           <option value="">Select Type</option>
-          <option value="courses">courses</option>
-          <option value="classes">classes</option>
+          <option value="courses">Courses</option>
+          <option value="classes">Classes</option>
         </select>
       </div>
-
       <div class="pending_classes_container">
         <div class="pending_class_item">
           <h5 class="class_heading">Term: Spring</h5>
@@ -150,26 +108,13 @@
           <h5 class="class_heading">Course ID: 3</h5>
           <h5 class="class_heading">Section: L01</h5>
           <h5 class="class_heading">Capacity: 34</h5>
-          <button id="validate_bt">Validate</button>
-          <button id="reject_bt">reject</button>
+          <h5 class="class_heading">Registered: 0</h5>
+          <button class="validate-btn" onclick="validateClass(1)">Validate</button>
+          <button class="reject-btn" onclick="rejectClass(1)">Reject</button>
         </div>
-
-
       </div>
     </section>
-
-
-
   </main>
-  <!-- <div class="popup-container">
-    <div class="popup-content">
-      <h2>Are you sure you want to proceed?</h2>
-      <button id="confirm-button" onclick="handlepopup()">Confirm</button>
-      <button id="cancel-button">Cancel</button>
-  </div> -->
-  <script src="assets\js\admin.js"></script>
-  <!-- <script type="module" src="../js/admin.js"></script> -->
-
+  <script src="../js/admin.js"></script>
 </body>
-
 </html>
