--- a/assets/side_Admin/admin.html
+++ b/assets/side_Admin/admin.html
@@ -67,11 +67,7 @@
         <input id="section-input" type="text" placeholder="Section Number" required>
         <input list="instructors" id="instructor-input" placeholder="Instructor" required>
         <datalist id="instructors"></datalist>
-        <select name="" id="status-selector">
-          <option value="">Status</option>
-          <option value="open-for-registration">Open for Registration</option>
-          <option value="closed-for-registration">Closed for Registration</option>
-        </select>
+        <!-- Removed status selector -->
         <button id="submit-bt">Submit</button>
       </form>
     </section>
