--- a/assets/side_Instructor/InstructorDashboard.html
+++ b/assets/side_Instructor/InstructorDashboard.html
@@ -42,7 +42,7 @@
             <!-- Class cards will be dynamically added here -->
         </section>
 
-        <section class="Students_List" style="display: none;">
+        <section class="Students_List">
             <table>
                 <thead>
                     <tr>
