--- a/assets/side_student/learningPath.html
+++ b/assets/side_student/learningPath.html
@@ -53,6 +53,10 @@
         </div>
     </main>
 
+    <footer>
+        <p>© 2025 Qatar University. All rights reserved.</p>
+    </footer>
+
     <script src="../js/navScript.js"></script>
     <script src="../js/learningPathScript.js"></script>
 </body>
