--- a/assets/side_student/studentDashboard.html
+++ b/assets/side_student/studentDashboard.html
@@ -109,6 +109,10 @@
         </article>
     </main>
 
+    <footer>
+        <p>© 2025 Qatar University. All rights reserved.</p>
+    </footer>
+
     <script src="../js/navScript.js"></script>
     <script src="../js/studentScript.js"></script>
 </body>
