--- a/assets/index.html
+++ b/assets/index.html
@@ -26,6 +26,7 @@
     </header>
 
     <main>
+        <!-- Login Form -->
         <div class="blur-bg-overlay"></div>
         <div class="form-interface">
             <span class="close-btn material-symbols-rounded">close</span>
@@ -52,6 +53,7 @@
             </div>
         </div>
 
+        <!-- Welcome Section -->
         <section id="home" class="welcome-section">
             <div class="welcome-content">
                 <h1>Welcome to Qatar University</h1>
