--- a/assets/side_Admin/admin.html
+++ b/assets/side_Admin/admin.html
@@ -29,6 +29,7 @@
     </ul>
   </aside>
   <main>
+    <!-- admin panel -->
     <h1 id="available-courses">Welcome to CSE admin panel</h1>
     <div class="available-courses">
       <div class="courses-header">
@@ -67,7 +68,6 @@
         <input id="section-input" type="text" placeholder="Section Number" required>
         <input list="instructors" id="instructor-input" placeholder="Instructor" required>
         <datalist id="instructors"></datalist>
-        <!-- Removed status selector -->
         <button id="submit-bt">Submit</button>
       </form>
     </section>
