--- a/assets/side_Instructor/InstructorDashboard.html
+++ b/assets/side_Instructor/InstructorDashboard.html
@@ -22,6 +22,7 @@
     </header>
 
     <main>
+        <!-- instructor stats -->
         <section class="dashboard-header">
             <h1>Welcome, <span class="instructor-name"></span>!</h1>
             <div class="dashboard-stats">
@@ -38,10 +39,12 @@
             </div>
         </section>
 
+        <!-- class cards -->
         <section class="Classes_Cards">
-            <!-- Class cards will be dynamically added here -->
+
         </section>
 
+        <!-- student list -->
         <section class="Students_List">
             <table>
                 <thead>
