--- a/assets/side_student/studentDashboard.html
+++ b/assets/side_student/studentDashboard.html
@@ -24,6 +24,7 @@
     </header>
 
     <main>
+        <!-- Main Content - track progress -->
         <article class="container">
             <section class="track-progress">
                 <h2>Track Progress</h2>
@@ -67,6 +68,7 @@
                 </div>
             </section>
 
+            <!-- Welcome Section -->
             <section class="logo-welcome-section">
                 <img src="../images/QU-logo.png" alt="Qatar University Logo" class="welcome-logo">
                 <div class="welcome-message">
@@ -75,6 +77,7 @@
                 </div>
             </section>
 
+            <!-- Courses Section -->
             <section class="course-section">
                 <h2>Courses</h2>
                 <div class="search-bars">
