--- a/assets/side_Admin/admin.html
+++ b/assets/side_Admin/admin.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin panel</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="../css/admin_styles.css" />
 </head>
+
 <body>
   <aside class="sidebar">
     <div class="sidebar-heading">
@@ -15,13 +18,14 @@
     </div>
     <ul class="links">
       <li>
-        <a href="#available-courses"><span class="material-symbols-outlined"> library_books  </span>Available courses & classes</a>
+        <a href="#available-courses"><span class="material-symbols-outlined"> library_books </span>Available courses &
+          classes</a>
       </li>
       <li>
-        <a href="#course-form-section"><span class="material-symbols-outlined"> add_box  </span>Add classes/courses</a>
+        <a href="#course-form-section"><span class="material-symbols-outlined"> add_box </span>Add classes/courses</a>
       </li>
       <li>
-        <a href="#pending_classes"><span class="material-symbols-outlined"> pending_actions  </span>Pending Items</a>
+        <a href="#pending_classes"><span class="material-symbols-outlined"> pending_actions </span>Pending Items</a>
       </li>
       <li>
         <a href="#" onclick="confirmLogout(event)"><span class="material-symbols-outlined"> logout </span>Logout</a>
@@ -45,13 +49,13 @@
     </div>
     <section class="available-courses">
       <div class="class-header">
-          <h2>Available Courses</h2>
-          <select id="course-status-filter">
-              <option value="all">All</option>
-              <option value="open-for-registration">Open for Registration</option>
-              <option value="in-progress">In Progress</option>
-              <option value="closed">Closed</option>
-          </select>
+        <h2>Available Courses</h2>
+        <select id="course-status-filter">
+          <option value="all">All</option>
+          <option value="open-for-registration">Open for Registration</option>
+          <option value="in-progress">In Progress</option>
+          <option value="closed">Closed</option>
+        </select>
       </div>
       <div class="class-container"></div>
     </section>
@@ -116,15 +120,16 @@
     </section>
   </main>
   <div class="popup-container" id="message-popup">
-      <div class="popup-content">
-          <h2 id="popup-message">Message</h2>
-          <div class="popup-buttons">
-              <button id="confirm-yes" style="display: none;">Yes</button>
-              <button id="confirm-no" style="display: none;">No</button>
-              <button id="close-popup">Close</button>
-          </div>
+    <div class="popup-content">
+      <h2 id="popup-message">Message</h2>
+      <div class="popup-buttons">
+        <button id="confirm-yes" style="display: none;">Yes</button>
+        <button id="confirm-no" style="display: none;">No</button>
+        <button id="close-popup">Close</button>
       </div>
+    </div>
   </div>
-  <script src="../js/admin.js"></script>
+  <script src=".. /js/admin.js"></script>
 </body>
+
 </html>
